--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 
 @media (max-width: 600px) {
     .opening-container {
+        position: relative;
         width: 100%;
         height: 100vh;
         background: #FFE2E2;
@@ -33,6 +34,20 @@
             text-align: center;
             font-size: larger;
         }
+
+        .balloons:nth-of-type(1) {
+            position: absolute;
+            bottom: 18%;
+            left: 20px;
+            height: 60px;
+        }
+
+        .balloons:nth-of-type(2) {
+            position: absolute;
+            bottom: 10%;
+            right: 20px;
+            height: 60px;
+        }
     }
 }
 
@@ -42,4 +57,5 @@
     left: 20px;
     width: clamp(250px, 70%, 400px);
     height: 100px;
+    
 }
