--- a/css/main.css
+++ b/css/main.css
@@ -51,4 +51,51 @@
   left: 20px;
   width: clamp(250px, 70%, 400px);
   height: 100px;
+}
+
+@media (max-width: 500px) {
+  .opening-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #FFE2E2;
+  }
+  .opening-container .card-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .opening-container .card-container .card {
+    width: 250px;
+    height: 300px;
+  }
+  .opening-container .card-container .card .card-picture {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .opening-container .text-container {
+    text-align: center;
+    font-size: larger;
+  }
+  .opening-container .balloons:nth-of-type(1) {
+    position: absolute;
+    bottom: 18%;
+    left: 20px;
+    height: 60px;
+  }
+  .opening-container .balloons:nth-of-type(2) {
+    position: absolute;
+    bottom: 10%;
+    right: 20px;
+    height: 60px;
+  }
+}
+.--spotify-frame {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: clamp(250px, 70%, 400px);
+  height: 100px;
 }/*# sourceMappingURL=main.css.map */
