adding animation for balloons

--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,11 @@
             height: 60px;
         }
     }
+
+    .seccond-container {
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 .--spotify-frame {
