--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,10 @@
     right: 20px;
     height: 60px;
   }
+  .seccond-container {
+    width: 100%;
+    height: 100vh;
+  }
 }
 .--spotify-frame {
   position: fixed;
